# RacketReady

./: .dockerignore  .eslintrc.cjs  .flake8  .gitattributes  .gitignore  .gitmodules  .pnp.cjs  .prettierrc  .prettierrc.js  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  jest-mongodb-config.js  jest.config.cjs  package-lock.json  package.json  pyproject.toml
.github/actions/yarn-install/: action.yml
.github/workflows/: coverage.yml  test-build.yaml
@common/: eslint.json  prettier.json
backend/: .eslintrc.cjs  .pnp.cjs  .prettierrc.js  nodemon.json  package-lock.json  package.json  tsconfig.json  tsoa.json
backend/routes/: routes.ts
backend/src/: app.ts  server.ts
backend/src/fruit/: FruitController.ts  fruitController.ts
backend/src/users/: usersController.ts  usersService.ts
frontend/: .eslintrc.cjs  .pnp.cjs  .prettierrc.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.tsx  main.tsx
templates/: index.html
web-app/: package.json  tsconfig.json  webpack.config.js
web-app/src/: app.tsx  index.tsx
