[tool.poetry]
name = "matchyosports"
version = "0.1.0"
description = "A website for matching people with partners to play sport with"
authors = [
  "Your Name <you@example.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
